[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.6"
gloo-timers = "0.2.6"
gloo-utils = "0.1.6"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.33"
# yew = "0.20.0"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
