[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
axum = "0.6.3"
axum-extra = { version = "0.4.2", features = ["spa"] }
base64 = "0.21.0"
clap = { version = "4.1.1", features = ["derive"] }
hyper = { version = "0.14.23", features = ["full"] }
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
